# QURE

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOYMENT.md  Dockerfile  PROJECT_STATUS.md  QURE.md  README.md  STREAMLIT_DEPLOYMENT.md  docker-compose.yml  launch_demo.bat  pyproject.toml  requirements-demo.txt  requirements.txt  test_ui_calculations.py  test_ui_navigation.md
.claude/: settings.local.json
.claude/agents/: architecture-scalability-advisor.md  code-quality-enforcer.md  database-architect.md  llm-ml-architect.md  security-compliance-auditor.md  ux-quality-evaluator.md  windows-dev-expert.md
agents/action/: __init__.py  action_agent.py
agents/algorithms/: __init__.py  algorithm_agent.py
agents/assurance/: __init__.py  assurance_agent.py
agents/data/: __init__.py  data_agent.py
agents/genai/: __init__.py  genai_reasoner.py
agents/learning/: README.md  __init__.py  context_clusterer.py  counterfactual_evaluator.py  drift_detector.py  learning_agent.py  logging_pipeline.py  requirements.txt  reward_shaper.py  thompson_sampling.py
agents/ml_model/: __init__.py  ml_model_agent.py
agents/orchestrator/: __init__.py  orchestrator.py  test_orchestrator_planner_integration.py
agents/planner/: __init__.py  planner_agent.py  test_planner.py
agents/policy/: __init__.py  policy_agent.py
agents/retriever/: __init__.py  parsers.py  retriever.py
agents/rules/: __init__.py  rules_engine.py
backend/: README.md  __init__.py  main.py  requirements.txt
backend/agents/: __init__.py  base_agent.py  reconciliation_agents.py
backend/api/: __init__.py  routes.py
backend/config/: __init__.py  settings.py
backend/database/: __init__.py  database.py  models.py
backend/services/: __init__.py  llm_service.py  reconciliation_service.py
common/schemas/: __init__.py  base.py  messages.py
data/: test_bandit_state.json
data/synthetic/: README.md  generate_finance_data.py  generate_healthcare_data.py  generate_insurance_data.py  generate_manufacturing_data.py  generate_retail_data.py  generate_test_data.py
demos/: finance_reconciliation_demo.py  interactive_finance_demo.py
demos/web-deploy/: README.md  index.html  (+2 more)
docker/: docker-compose.yml
docs/: PHASE_5_COMPLETION_SUMMARY.md  PLANNER_QRU_DESIGN.md  WEBINAR_OUTLINE.md
scripts/: setup_env.sh
substrate/: __init__.py  evidence_tracker.py  feature_store.py  graph_store.py  vector_store.py
tests/: conftest.py
ui/: BUSINESS_DEMO_GUIDE.md  README.md  business_demo_enhancements.py  streamlit_app.py
(+25 files in other folders)
