[tool.poetry]
name = "qure"
version = "0.1.0"
description = "QURE: Quality & Uncertainty Resolution Engine - Multi-Agent Intelligence System"
authors = ["Michael Pointer <mpointer@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Core
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.4.0"
python-dotenv = "^1.0.0"

# Orchestration (optional - not needed for basic demo)
# temporalio = "^1.4.0"

# Data Processing
pandas = "^2.1.0"
numpy = "^1.25.0"
spacy = "^3.7.0"
sentence-transformers = "^2.2.0"

# ML
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
scipy = "^1.11.0"
# lightgbm = "^4.1.0"  # Optional

# LLM
openai = "^1.3.0"
anthropic = "^0.7.0"
# langchain = "^0.0.335"
tiktoken = "^0.5.0"

# Vector/Graph
chromadb = "^0.4.15"
neo4j = "^5.14.0"
networkx = "^3.2.0"

# Monitoring (optional)
# evidently = "^0.4.0"
# mlflow = "^2.8.0"

# Utils
# redis = "^5.0.0"
aiohttp = "^3.9.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
python-dateutil = "^2.8.0"
psycopg2-binary = "^2.9.0"

# String matching
rapidfuzz = "^3.5.0"
jellyfish = "^1.0.0"

# Document parsing
PyPDF2 = "^3.0.0"
python-docx = "^1.1.0"
beautifulsoup4 = "^4.12.0"

# OCR (optional)
# pytesseract = "^0.3.10"

# Feature Engineering (optional)
# featuretools = "^1.28.0"

# Contextual Bandits (optional - Phase 4)
# vowpalwabbit = "^9.8.0"

# Offline RL (optional - Phase 4)
# d3rlpy = "^2.4.0"

# Linting/Type Checking
ruff = "^0.1.0"
mypy = "^1.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ipython = "^8.17.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=agents --cov=substrate --cov=common --cov-report=html --cov-report=term"
